--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
+title: Ahmed Bouchefra
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: http://brianmaierjr.github.com/long-haul
+url: http://techiediaries.github.com/ahmed-bouchefra
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
